# jinyoung-toolkit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CRAWLING_AUDIT_REPORT.md  Dockerfile  IMPLEMENTATION_SPEC_v2.md  LICENSE  README.md  SITE_VERIFICATION.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
automl_reporter/: __main__.py  app.py  cli.py  dl_option.py  feature_inspector.py  report_builder.py  runner.py  visualizer.py
automl_reporter/tests/: test_dl_option.py  test_report_builder.py  test_runner.py
docs/: audit_report_v4.md  completion_report.md  expect_static_verification_v4.md  kmong_faq.md  kmong_product_copy.md
review_analyzer/: __main__.py  advanced_analyzer.py  analyzer.py  app.py  cli.py  comparator.py  comparison_report_generator.py  preset_loader.py  selector_inferer.py
review_analyzer/crawler/: drivers.py  engine.py  rate_limiter.py
review_analyzer/presets/: amazon_reviews.yaml  apple_app_store.yaml  cgv_movie.yaml  coupang_reviews.yaml  custom_template.yaml  eleven_st.yaml  google_play.yaml  melon_song.yaml  naver_blog.yaml  naver_cafe.yaml  naver_shopping.yaml  public_data_example.yaml  yanolja_hotel.yaml  yes24_book.yaml  (+1 more)
samples/: automl_text_demo.csv
scripts/: run_automl_reporter.sh  run_review_analyzer.sh
shared/: comparison_report_generator.py  config.py  delivery.py  exporters.py  korean_nlp.py  logger.py  report_base.py  report_generator.py  ui_components.py  visitor_stats.py
tests/: test_integration.py  test_shared.py
(+27 files in other folders)
